Updated example topology

--- a/inventory.yml
+++ b/inventory.yml
@@ -2,11 +2,14 @@
 all:
   hosts:
     leaf1.example.com:
+    leaf2.example.com:
+    spine1.example.com:
+    spine2.example.com:
 
- 
+
   vars:
     ansible_user: cumulus
     ansible_password: cumulus
-    ansible_become_user: root 
+    ansible_become_user: root
     ansible_become_password: cumulus
     ansible_python_interpreter: /usr/bin/python
